<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="start|end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_aboutscreen"
    tools:context="com.pentavalue.yousry.rakaislamicapp.kotlin.activities.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPaleBrown"
        app:navigationIcon="@drawable/ic_left_white_arrow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="start|end"
            android:text="@string/app_about"

            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/raka_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textColor="@color/colorDarkJungleGreen"
        android:id="@+id/textView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >




            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="73dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/app_about_details"
                android:textColor="@color/colorDimGray"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/textView4"
                android:layout_below="@+id/textView3"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorDimGray">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/blackColor"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:gravity="center"
                android:paddingRight="20dp"
                android:id="@+id/textView5"
                android:text="@string/app_about_details_2"
                android:layout_below="@+id/textView4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorGold"
                android:paddingLeft="20dp"
                android:gravity="center"
                android:paddingRight="20dp"
                android:id="@+id/textView6"
                android:text="mail@mail"
                android:layout_below="@+id/textView5"/>

        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"

        android:src="@drawable/copyright_white"/>
</RelativeLayout>
