<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context="com.pentavalue.yousry.rakaislamicapp.kotlin.activities.MenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPaleBrown"
        app:navigationIcon="@drawable/ic_left_white_arrow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="start|end"
            android:text="@string/menu_toolbar"

            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_shadow_menu"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/friday_prayer_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.8"
                        android:src="@drawable/azaan" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/Gom3aPrayer"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorIsabelline">

                </View>

                <LinearLayout
                    android:id="@+id/eid_prayer_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|start"
                        android:layout_weight="0.8"
                        android:src="@drawable/azaan" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/EidPrayer"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorIsabelline">

                </View>

                <LinearLayout
                    android:id="@+id/funeral_prayer_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|start"
                        android:layout_weight="0.8"
                        android:src="@drawable/azaan" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/GanazaPrayer"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorIsabelline">

                </View>

                <LinearLayout
                    android:id="@+id/taraweeh_prayer_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|start"
                        android:layout_weight="0.8"
                        android:src="@drawable/azaan" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/Tarawy7Prayer"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/country_item"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|end"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_shadow_menu"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="15">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|start"
                    android:layout_weight="6"
                    android:src="@drawable/worldwide" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|end"
                    android:layout_weight="5"
                    android:gravity="start|end|center"
                    android:text="@string/country_text_view"
                    android:textColor="@color/colorDarkJungleGreen"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="end|center_vertical"
                    android:text="@string/makka"
                    android:textColor="@color/colorPaleBrown"
                    android:textSize="16sp"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_shadow_menu"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/about_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|start"
                        android:layout_weight="0.8"
                        android:src="@drawable/info" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/app_about"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@color/colorIsabelline">

                </View>

                <LinearLayout
                    android:id="@+id/share_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|end"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end|start"
                        android:layout_weight="0.8"
                        android:src="@drawable/networking" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|end"
                        android:layout_weight="0.2"
                        android:gravity="start|end|center"
                        android:text="@string/app_share"
                        android:textColor="@color/colorDarkJungleGreen"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"

                android:background="@null"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|start"

                    android:src="@drawable/icon_vector_instagram" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|start"
                    android:layout_marginLeft="10dp"

                    android:layout_marginRight="10dp"
                    android:src="@drawable/icon_vector_twitter" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end|start"

                    android:src="@drawable/icon_vector_facebook" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_shadow_start_color"
        android:text="Ads"
        android:textColor="@color/whiteColor" />
</RelativeLayout>
