<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F7"
    android:orientation="vertical"
    tools:context="com.pentavalue.yousry.rakaislamicapp.kotlin.activities.PrayerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/colorPaleBrown"
        app:navigationIcon="@drawable/ic_left_white_arrow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|end"
            android:text="@string/Gom3aPrayer"
            android:textColor="@color/whiteColor"
            android:textSize="20sp" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_ads"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="2dp"
            android:paddingStart="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/islamic_prayer_header" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|end"
                    android:gravity="start|end|center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/information_about_prayer"
                    android:textColor="@color/colorPaleBrown"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/shap_shadow"
                android:paddingBottom="10dp"
                android:paddingLeft="23dp"
                android:paddingRight="23dp"
                android:paddingTop="10dp"
                android:text="@string/Gom3aDetailsPrayer"
                android:textColor="@color/colorDimGray"
                android:textSize="14sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/header_raka_left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|end"
                    android:gravity="start|end|center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/rakaat"
                    android:textColor="@color/colorPaleBrown"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shap_shadow"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclurRakaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:verticalScrollbarPosition="defaultPosition">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclurDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:isScrollContainer="true">

                    </android.support.v7.widget.RecyclerView>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_ads"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_shadow_start_color"
        android:drawableTop="@android:drawable/ic_menu_close_clear_cancel"
        android:text="Ads"
        android:textColor="@color/whiteColor" />
</RelativeLayout>
